@@ -40,7 +40,7 @@
   30-Nov-2020    V0.47 add UniProtIdMappingProvider() and tests.
    1-Dec-2020    V0.48 make UniProtIdMappingProvider() a singleton.
    2-Dec-2020    V0.49 Add legacy id mapping data in UniProtIdMappingProvider()
-  10-Dec-2020    V0.50 Add 6yt65'tdd' format in UniProtIdMappingProvider() and improve save and load performance
+  10-Dec-2020    V0.50 Add 'tdd' format in UniProtIdMappingProvider() and improve save and load performance
   10-Dec-2020    V0.51 Add to and from stash methods in UniProtIdMappingProvider()
   22-Mar-2020    V0.52 Add backup and restore methods in  UniProtIdMappingProvider()
   23-Mar-2020    V0.53 Add clearCache methods and preserve loaded state across multiple instances of UniProtIdMappingProvider()
@@ -49,3 +49,4 @@
   10-May-2021    V0.56 Add review option for doGeneLookup()
   10-May-2021    V0.57 Adjustments to UniProt FASTA comment line parser
   26-May-2021    V0.58 Add Pfam mapping methods and GlyGenProvider() and associated tests
+  27-May-2021    V0.59 Tweaking diagnostic output in GlyGenProvider()
